added first part from my pagination